--- a/SPM-ASG1/assignment1/assignment1.csproj
+++ b/SPM-ASG1/assignment1/assignment1.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,6 +61,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="arcadeMode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="arcadeMode.Designer.cs">
+      <DependentUpon>arcadeMode.cs</DependentUpon>
+    </Compile>
+    <Compile Include="displayHighScore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="displayHighScore.Designer.cs">
+      <DependentUpon>displayHighScore.cs</DependentUpon>
+    </Compile>
+    <Compile Include="freeGameMode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="freeGameMode.Designer.cs">
+      <DependentUpon>freeGameMode.cs</DependentUpon>
+    </Compile>
+    <Compile Include="gameInstructionForArcadeMode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gameInstructionForArcadeMode.Designer.cs">
+      <DependentUpon>gameInstructionForArcadeMode.cs</DependentUpon>
+    </Compile>
+    <Compile Include="gameInstructionForFreePlay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gameInstructionForFreePlay.Designer.cs">
+      <DependentUpon>gameInstructionForFreePlay.cs</DependentUpon>
+    </Compile>
     <Compile Include="menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +99,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="arcadeMode.resx">
+      <DependentUpon>arcadeMode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gameInstructionForArcadeMode.resx">
+      <DependentUpon>gameInstructionForArcadeMode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gameInstructionForFreePlay.resx">
+      <DependentUpon>gameInstructionForFreePlay.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="menu.resx">
       <DependentUpon>menu.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +132,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Database1.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Database1_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
