linklng to database done sign up and login logic done

--- a/SPM-ASG1/assignment1/assignment1.csproj
+++ b/SPM-ASG1/assignment1/assignment1.csproj
@@ -69,6 +69,11 @@
     <Compile Include="arcadeMode.Designer.cs">
       <DependentUpon>arcadeMode.cs</DependentUpon>
     </Compile>
+    <Compile Include="Database1DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="displayHighScore.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +121,9 @@
     <EmbeddedResource Include="arcadeMode.resx">
       <DependentUpon>arcadeMode.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="displayHighScore.resx">
+      <DependentUpon>displayHighScore.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +148,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Database1DataSet.xsc">
+      <DependentUpon>Database1DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet.xss">
+      <DependentUpon>Database1DataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
