--- a/SPM-ASG1/assignment1/assignment1.csproj
+++ b/SPM-ASG1/assignment1/assignment1.csproj
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System">
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -86,24 +86,10 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="PBL.cs" />
-    <Compile Include="Q1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Q1.Designer.cs">
-      <DependentUpon>Q1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Q2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Q2.Designer.cs">
-      <DependentUpon>Q2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Q3.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Q3.Designer.cs">
-      <DependentUpon>Q3.cs</DependentUpon>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="SharedData.cs" />
     <Compile Include="SignUp.cs">
@@ -150,15 +136,6 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Q1.resx">
-      <DependentUpon>Q1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Q2.resx">
-      <DependentUpon>Q2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Q3.resx">
-      <DependentUpon>Q3.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
     </EmbeddedResource>
@@ -173,14 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Database1DataSet.xsc">
       <DependentUpon>Database1DataSet.xsd</DependentUpon>
     </None>
@@ -213,6 +185,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
+    <Content Include="homeIcon.jpg" />
     <None Include="Resources\Screenshot 2024-06-10 222221.png" />
   </ItemGroup>
   <ItemGroup>
