--- a/SPM-ASG1/assignment1/assignment1.csproj
+++ b/SPM-ASG1/assignment1/assignment1.csproj
@@ -86,6 +86,25 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="PBL.cs" />
+    <Compile Include="Q1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Q1.Designer.cs">
+      <DependentUpon>Q1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Q2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Q2.Designer.cs">
+      <DependentUpon>Q2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Q3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Q3.Designer.cs">
+      <DependentUpon>Q3.cs</DependentUpon>
+    </Compile>
     <Compile Include="SharedData.cs" />
     <Compile Include="SignUp.cs">
       <SubType>Form</SubType>
@@ -130,6 +149,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Q1.resx">
+      <DependentUpon>Q1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Q2.resx">
+      <DependentUpon>Q2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Q3.resx">
+      <DependentUpon>Q3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
